--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "primeicons": "*",
     "primeng": "*",
     "quagga": "*",
+    "quill": "^1.3.6",
     "rxjs": "*",
     "rxjs-compat": "*",
     "systemjs": "*",
