--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ng": "ng",
     "start": "ng serve --aot --base-href '/admin/' --proxy-config proxy.config.json",
     "build": "ng build --aot --prod --deploy-url /admin/ --base-href '/admin/'",
-    "deploy": "rm -rf ../ZenRetail/webroot/admin; mv ./dist ../ZenRetail/webroot/admin;"
+    "deploy": "rm -rf ../ZenRetail/webroot/admin; mv ./dist ../ZenRetail/webroot/admin;",
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
@@ -17,7 +18,6 @@
     "@angular/compiler": "*",
     "@angular/core": "*",
     "@angular/forms": "*",
-    "@angular/http": "*",
     "@angular/platform-browser": "*",
     "@angular/platform-browser-dynamic": "*",
     "@angular/router": "*",
@@ -32,23 +32,23 @@
     "primeicons": "*",
     "primeng": "*",
     "quagga": "*",
-    "quill": "^1.3.6",
+    "quill": "*",
     "rxjs": "*",
     "rxjs-compat": "*",
     "systemjs": "*",
     "ts-helpers": "*",
     "uglifyjs-webpack-plugin": "*",
     "webpack-dev-middleware": "*",
-    "zone.js": "*"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "*",
     "@angular/cli": "*",
     "@angular/compiler-cli": "*",
-    "@angular-devkit/build-angular": "*",
     "awesome-typescript-loader": "*",
     "codelyzer": "*",
     "ts-node": "*",
     "tslint": "*",
-    "typescript": "3.4.5"
+    "typescript": "*"
   }
 }
